# leo

client/: CMakeLists.txt  LoginSettings.ini  LoginWindowUserInfo  MessageBuffer.h  Package.h  QQLogin.aps  QQLogin.pri  QQLogin.pro  QQLogin.sln  QQLogin.vcxproj  QQLogin.vcxproj.filters  cpp.hint  leo-client.aps  leo-client.sln  leo-client.vcxproj  leo-client.vcxproj.filters  login.ui  main.cpp  mybutton.cpp  mybutton.h  mybuttonone.cpp  mybuttonone.h  qqlogin.cpp  qqlogin.h  qqlogin.qrc  qqlogin.ui  resource.h  resource1.h  signup.h
client/AddFirend/: AddFriendWindow.cpp  AddFriendWindow.h  AddFriendWindow.ui  FriendNoteDialog.h  Image.qrc  QAddFrd.cpp  QAddFrd.h  QAddFrd.ui
client/AddFirendsWindow/: AddFriendWindow.cpp  AddFriendWindow.ui  FriendNoteDialog.ui
client/Agency/: Agency.h  AgencyTCP.cpp  AgencyTCP.h  AgencyUDP.cpp  AgencyUDP.h
client/ChatWindow/: qnchatmessage.h
client/MainWindow/: QFreindTreeWidegt.css  qclient.cpp  qclient.h
client/Mediator/: Mediator.cpp  Mediator.h
client/Net/: INet.h  TCPNet.cpp  TCPNet.h  UDPNet.cpp  UDPNet.h
client/NetThread/: TcpThread.cpp  TcpThread.h  UdpThread.cpp  UdpThread.h  myqueue.h
client/Pack/: Pack.h
client/Protocol/: Protocol.cpp  Protocol.h
client/QClient/: QAvatar.cpp  QAvatar.h  QFrdListItem.cpp  QFrdListItem.h  QItemBase.cpp  QItemBase.h  QMessageItem.cpp  QMessageItem.h  QMsgListItem.h  QPersonList.cpp  QPersonList.h  qclient.cpp  qclient.h  qclient.ui  qheadicon.cpp  qheadicon.h
client/UDPVerify/: UDPVerify.cpp  UDPVerify.h
client/base/: QAvatar.cpp  QAvatar.h
client/chat/: qchatwindow.cpp  (+3 more)
(+180 files in other folders)
